--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,13 @@ body {
   text-align: center;
 }
 
+table, th, td {
+   border: 1px solid black;
+}
+table {
+    border-collapse: collapse;
+}
+
 @media only screen and (min-width: 768px) {
     /* For desktop: */
 ]
